# aca-marketplace-analytics-engineering

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  (+1 more)
dashboards/: dashboard_specification.md
dbt_project/: dbt_project.yml  profiles.example.yml  profiles.yml
docs/: ADVISOR_TARGETING_NOTES.md  CLAIM_BOUNDARY.md  GITHUB_ACTIONS_RESEARCH_RUN.md  PHD_APPLICATION_PROJECT_SUMMARY.md  REPRODUCIBILITY_CHECKLIST.md  RESEARCH_VALIDITY_AUDIT_2026-07-13.md  codex_pilot_results_2026-07-12.md  dashboard_spec.md  error_analysis_2026-07-12.md  executive_summary.md  experiment_status_2026-07-12.md  insight_snapshot.md  limitations_and_next_steps.md  metric_dictionary.md  modeling_decisions.md  phd_application_research_brief.md  real_data_validation_results.md  resume_research_entry.md  router_error_analysis_2026-07-12.md  router_eval_results_2026-07-12.md  routing_challenge_results_2026-07-12.md  sample_queries.sql  session_credit_exhaustion_2026-07-12.md
lookml/: benefits.view.lkml  geography.view.lkml  issuers.view.lkml  marketplace_analytics.model.lkml  plan_availability.view.lkml  plan_history.view.lkml  plan_premium_summary.view.lkml  plans.view.lkml  premiums.view.lkml  quality.view.lkml
scripts/: download_cms_pufs.py  download_cms_pufs_socrata.py  generate_case_study_outputs.py  load_to_duckdb.py  profile_raw_data.py  validate_raw_files.py
tests/: conftest.py  test_dbt_project.py  test_download_cms_pufs.py  test_generate_outputs.py  test_load_profile.py  test_load_to_duckdb.py
(+205 files in other folders)
