[project]
name = "aca-marketplace-analytics"
version = "1.0.0"
description = "ACA Marketplace analytics engineering case study from real CMS PY2026 PUF data"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_case_study_outputs.py" = ["E501"]
